release/0.1.0: Add API class and initial dataset queries
